<resources>
    <string name="app_name">FixApp</string>
    <string name="title_activity_verify_phone">Verify Phone Number</string>
    <string name="job_details_activity">Job Details</string>
    <string name="offer_details_activity">Offer Details</string>
    <string name="browse_jobs_activity">Browse jobs</string>
    <string name="search_jobs_activity">Search jobs</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="categories_list_instructions">In what category is the item you want fixed?</string>
    <string name="describe_project_header">Describe Your project</string>
    <string name="title">Title;</string>
    <string name="job_title_sample">Job Title e.g Broken water tap</string>
    <string name="job_desc_sample">Briefly describe the job</string>
    <string name="job_post_button">Post Job</string>
    <string name="edit_job_details">Edit Job Details</string>
    <string name="title_activity_poster_offers_accepted">Accepted Offers</string>
    <string name="title_activity_poster_offers_received">Received Offers</string>
    <string name="title_activity_fixer_offers_made">Offers Made</string>
    <string name="title_activity_fixer_offers_accepted">Accepted Offers</string>
    <string name="job_images_instructions">Upload image of what you want to be fixed (optional)</string>
    <string name="description">Description;</string>
    <string name="rate_poster">Rate the job poster</string>
    <string name="rate_fixer_instruction">Rate the job fixer</string>
    <string name="payment_summary_title">Payment summary</string>

    <string name="hint_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_phonenumber">Your phone number e.g 07…</string>
    <string name="phonenumber_caution">\u2713 Make sure to put in your correct phone number as this is how people will be able to contact you</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_your_number">Your Phone number</string>
    <string name="hint_otp_code">OTP Code</string>
    <string name="hint_gender">Gender</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_verify">VERIFY</string>
    <string name="btn_send_number">SEND</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Login.</string>
    <string name="register_on_fixapp">Register with FixApp</string>
    <string name="verify_phone_title">Please enter you phone number</string>
    <string name="otp_title">Enter the code that you received via sms</string>
    <string name="verifying_text">Verifying</string>

    <string name="project_images_info">Pictures of what has to be fixed</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_post_job">Post a job</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FixApp</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_header_subtitle">Get things done</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">Map</string>

    <!--nav bar strings-->
    <string name="my_jobs">My Jobs</string>
    <string name="offers_received">Offers Received</string>
    <string name="offers_accepted">Offers Accepted</string>
    <string name="offers_made">Offers Made</string>
    <string name="browse_jobs">Browse Jobs</string>
    <string name="messages">Messages</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="payment_history">Payment History</string>

    <string name="ask_job_date">When do you need it done?</string>
    <string name="continue_button">Continue</string>
    <string name="check_job_time">At a certain time of the day</string>
    <string name="title_job_hourly_rate">Hourly rate</string>
    <string name="title_job_total">Total</string>
    <string name="job_total_hours">Hours</string>
    <string name="ask_what_is_budget">What is your budget</string>
    <string name="price_per_hr">Price per hour</string>
    <string name="title_summary_budget">Estimated budget;</string>
    <string name="budget_default_value">UGX.0</string>
    <string name="title_add_job_must_haves">\u002B Add must haves</string>
    <string name="switch_ask_job_remote">Can this task be completed remotely?</string>
    <string name="job_location_hint">Job Location e.g Kireka, Kampala</string>
    <string name="sort_job_time_instruction">Don\'t worry you can sort out the exact time with the tasker later</string>
    <string name="check_box_morning">Morning before 10am</string>
    <string name="check_box_midday">Midday 10am - 2am</string>
    <string name="check_box_afternoon">Afternoon 2pm - 6pm</string>
    <string name="check_box_evening">Evening after 6pm</string>
    <string name="job_must_haves_instructions">Add up to three things the Tasker needs
        to have inorder to make an offer, e.g</string>
    <string name="job_must_haves_eg_one">\u2713 Must have a van</string>
    <string name="job_must_haves_eg_two">\u2713 Should be able to work late</string>
    <string name="must_haves_hint">What they must have or do</string>
    <string name="add_must_have">Add</string>
    <string name="save_must_have">Save</string>
    <string name="empty_posted_jobs_list">You have not posted any jobs yet</string>
    <string name="empty_fixer_offers_accepted_list">Your offers that have been accepted by the Job poster will appear here</string>
    <string name="empty_fixer_offers_made_list">The offers you have made to jobs will appear here</string>
    <string name="empty_poster_offers_accepted_list">The offers you accept will appear here</string>
    <string name="empty_poster_offers_received_list">The offers you receive will appear here</string>
    <string name="action_search">Browse jobs</string>
    <string name="search_hint">Search jobs</string>
    <string name="settings_description">Search available jobs</string>

    <string name="title_as_a_fixer">As a Fixer</string>
    <string name="title_as_a_poster">As a Poster</string>
    <string name="title_general">General</string>

    <string name="send_offer">Send Offer</string>
    <string name="cancel">Cancel</string>
    <string name="notice_yes">Yes</string>

    <string name="offer_job_instructions">You are making an offer to this job;</string>
    <string name="offer_job_poster_instructions">Posted by;</string>
    <string name="offer_how_much_instructions">How much are you offering to do this job at? (optional)</string>
    <string name="offer_message_instructions">Write a brief message below to accompany your offer</string>
    <string name="offer_amount_hint">Enter amount eg 250,000</string>
    <string name="offer_message_hint">Brief message</string>
    <string name="notif_poster_offer_amnt_not_set_by_fixer">This job fixer is comfortable with the amount you set for this job</string>
    <string name="notif_fixer_offer_amnt_not_set">Not setting an offer amount means you are
        comfortable with the job cost set by the job poster</string>

    <!--fcm-->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">Global</string>
    <string name="msg_subscribe_failed">Failed to subscribe to global topic</string>
    <string name="msg_subscribed">Subscribed to global topic</string>
    <string name="fcm_message">FCM Message</string>

    <string-array name="poster_jobs_filter_array">
        <item>All</item>
        <item>Draft</item>
        <item>Posted</item>
        <item>Assigned</item>
        <item>In Progress</item>
        <item>Offers</item>
        <item>Completed</item>
    </string-array>

    <string-array name="fixer_jobs_filter_array">
        <item>Offers Made</item>
        <item>Offers Accepted</item>
    </string-array>
    <string name="title_activity_post_job2">PostJob2Activity</string>
    <string name="job_details_tab">Job Details</string>
    <string name="job_date_tab">Job Time</string>
    <string name="job_budget_tab">Job Budget</string>

    <string name="menu_accept_offer">Accept Offer</string>
    <string name="menu_delete_offer">Delete</string>
    <string name="menu_view_job_details">View Job details</string>
    <string name="menu_edit_offer">Edit Offer</string>
    <string name="menu_call">Call</string>
    <string name="menu_save">save</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="title_activity_image_preview">Image Preview</string>
    <string name="create_job_button">Create Job</string>

    <!-- For app on boarding screens-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
