<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/post_job"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_activity_post_job" />
        <item
            android:id="@+id/my_jobs"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_jobs" />
        <item
            android:id="@+id/browse_jobs"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/browse_jobs" />

        <item
            android:id="@+id/my_profile"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/profile" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/payment_history"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/payment_history" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
